# GasSimulation

./: .kateproject  CMakeLists.txt  README.md  dummy.txt  main.cpp
inc/: BilateralInteractor.h  Box.h  DrawableObject.h  DrawableObjectBase.h  Dummy.h  ForceApplier.h  Interactor.h  Particle.h  UnilateralInteractor.h  Visualizer.h  Visualizer2D.h  Visualizer3D.h
inc/drawables/: Box.h  DrawableObject.h  DrawableObjectBase.h  Particle.h
inc/interactions/: CollisionCalculator.h  InteractionCalculator.h  InteractionCalculatorBase.h
src/: Box-ETI.cpp  Box.cpp  DrawableObject.cpp  DrawableObjectBase.cpp  Dummy.cpp  ForceApplier.cpp  Interactor.cpp  Particle-ETI.cpp  Particle.cpp  Visualizer-ETI.cpp  Visualizer.cpp  Visualizer2D.cpp  Visualizer3D.cpp
src/drawables/: Box.cpp  DrawableObject.cpp  DrawableObjectBase.cpp  Particle.cpp
src/etis/: Box-ETI.cpp  InteractionCalculator-ETI.cpp  Particle-ETI.cpp  Visualizer-ETI.cpp
src/interactions/: CollisionCalculator.cpp  InteractionCalculator.cpp
